# django_query_analyzer

./: .gitignore  cli.py  pyproject.toml
.github/workflows/: ci.yml
